fix: `pre` background color for dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -375,6 +375,7 @@ img {
 footer {
   padding: 1.875rem 0;
   border-top: 1px #EAEAEA solid;
+  /* border-top: 1px solid {{ site.footer-border-col | default: "#EAEAEA" }}; */
   margin-top: 3.125rem;
   font-size: 0.875rem;
   background-color: {{ site.footer-col | default: "#F5F5F5" }};
@@ -826,7 +827,7 @@ pre {
 }
 .highlight > pre {
   background-image: linear-gradient(
-    rgba(0,0,0,0.06), rgba(0,0,0,0.06) 1.5em, rgba(0,0,0,0.03) 1.5em, rgba(0,0,0,0.03) 3em);
+    rgba(221,221,221,0.9), rgba(221,221,221,0.9) 1.5em, rgba(221,221,221,0.85) 1.5em, rgba(221,221,221,0.85) 3em);
   background-size: auto 3em;
   background-position-y: 0.625rem;
   border: 1px solid rgba(0,0,0,0.1);
